# db_fwd

./: AGENTS.md  DESIGN.md  README.md  db_fwd.py  pyproject.toml
.github/workflows/: build-windows-exe.yml  check-type-hints.yml  lint.yml  test.yml
tests/: test_api.py  test_cli.py  test_config.py  test_database.py  test_logging.py
