[project]
name = "db_fwd"
version = "0.1.0"
description = "Forwards a SQL query result to a web API endpoint."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
db_fwd = "db_fwd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests",
    "pytest>=8.0.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
# Check configuration
warn_unused_configs = 'True'

# Type checking
disallow_any_generics = 'True'
check_untyped_defs = 'True'
warn_unused_ignores = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'True'
strict_equality = 'True'

# Parse but don't check imported libraries
follow_imports = 'silent'
ignore_missing_imports = 'True'

# Non-typing checks
warn_unreachable = 'True'

# Reporting
pretty = 'True'
